Update i18n strings and use dynamic values in PreFooter and Bento components

--- a/src/i18n/en.json
+++ b/src/i18n/en.json
@@ -5,5 +5,18 @@
 	"INTRO_TITLE_AFTER_BREAK": "to the Esland Awards",
 	"INTRO_DESCRIPTION_1": "Cinema has the Oscars, music has the Grammys and <strong>streaming has the ESLAND</strong>. The awards that celebrate the creativity and talent of the best content creators in <strong>the Spanish-speaking community</strong>.",
 	"INTRO_DESCRIPTION_2": "Spain, Latin America and Andorra united by creators and their communities, to remember and relive <strong>some of the best moments of the year</strong>.",
-	"INTRO_DESCRIPTION_3": "After two galas celebrated, one in the Palau de la Música Catalana in Barcelona, and another in the National Auditorium of Mexico City, we just have to wait for <strong>the third edition in Andorra</strong>."
+	"INTRO_DESCRIPTION_3": "After two galas celebrated, one in the Palau de la Música Catalana in Barcelona, and another in the National Auditorium of Mexico City, we just have to wait for <strong>the third edition in Andorra</strong>.",
+	"BENTO_TITLE_1": "ANDORRA: THE ZENITH OF THE ESLAND AWARDS",
+	"BENTO_DESCRIPTION_1": "This year, the blue carpet moment will be replaced and improved, thanks to the incredible Andorran landscapes, by a <strong>white carpet in the middle of the snow</strong>, located in the <strong>ski slopes of Andorra</strong>.",
+	"BENTO_TITLE_2": "THE WHITE CARPET",
+	"BENTO_SUBTITLE_2": "February 16, 2024",
+	"BENTO_DESCRIPTION_2": "This year, the blue carpet moment will be replaced and improved, thanks to the incredible Andorran landscapes, by a <strong>white carpet in the middle of the snow</strong>, located in the <strong>ski slopes of Andorra</strong>.",
+	"BENTO_TITLE_3": "THE GALA",
+	"BENTO_SUBTITLE_3": "February 17, 2024",
+	"BENTO_DESCRIPTION_3": "An awards gala full of <strong>top-notch content and many surprises</strong>, in which the <strong>winners</strong> of this third edition of the ESLAND Awards will be revealed.",
+	"BENTO_TITLE_4": "ENJOY THE COMMUNITY'S REDDIT",
+	"BENTO_DESCRIPTION_4": "This year, the reddit will not be part of the awards voting, but it will <strong>be part of the community</strong>. The official subreddit of the ESLAND Awards is open for you, so you can share your clips, your opinions and so you can <strong>interact with the entire community</strong> of Spanish-speaking streaming.",
+	"VIDEO_ALT": "Esland - awards for the Spanish-speaking streaming community",
+	"VIDEO_BUTTON": "Relive the 2nd Edition",
+	"PREFOOTER_VIDEO_TITLE": "Guide to the 3rd Edition of the ESLAND awards"
 }
