--- a/src/i18n/es.json
+++ b/src/i18n/es.json
@@ -5,7 +5,22 @@
 	"INTRO_TITLE_AFTER_BREAK": "a los Premios Esland",
 	"INTRO_DESCRIPTION_1": "El cine tiene los Oscars, la música tiene los Grammy y <strong>el streaming tiene los ESLAND</strong>. Los premios que celebran la creatividad y el talento de los mejorescreadores de contenido de <strong>la comunidad hispanohablante</strong>.",
   "INTRO_DESCRIPTION_2": "España, Latinoamérica y Andorra unidas por creadores, creadoras y suscomunidades, para recordar y revivir <strong> algunos de los mejores momentos del año</strong>.",
-  "INTRO_DESCRIPTION_3": "Tras dos galas celebradas, una en el Palau de la Música Catalana de Barcelona, y otra en el Auditorio Nacional de la Ciudad de México, solo queda esperar a <strong>la tercera edición en Andorra</strong>."
+  "INTRO_DESCRIPTION_3": "Tras dos galas celebradas, una en el Palau de la Música Catalana de Barcelona, y otra en el Auditorio Nacional de la Ciudad de México, solo queda esperar a <strong>la tercera edición en Andorra</strong>.",
+	"BENTO_TITLE_1": "ANDORRA: EL CÉNIT DE LOS PREMIOS ESLAND",
+	"BENTO_DESCRIPTION_1": "Este año, el momento de la alfombra azul será sustituido y mejorado, gracias a los increíbles paisajes andorranos, por una <strong>alfombra blanca en plena nieve</strong> , situada en las <strong>pistas de esquí de Andorra</strong>.",
+	"BENTO_TITLE_2": "LA ALFOMBRA BLANCA",
+	"BENTO_SUBTITLE_2": "16 de febrero de 2024",
+	"BENTO_DESCRIPTION_2": "Este año, el momento de la alfombra azul será sustituido y mejorado, gracias a los increíbles paisajes andorranos, por una <strong>alfombra blanca en plena nieve</strong>, situada en las <strong>pistas de esquí de Andorra</strong>.",
+	"BENTO_TITLE_3": "LA GALA",
+	"BENTO_SUBTITLE_3": "17 de febrero de 2024",
+	"BENTO_DESCRIPTION_3": "Una gala de premios llena de <strong>contenido de primer nivel y muchas sorpresas</strong>, en la que se descubrirán los <strong>ganadores</strong> de esta tercera edición de los Premios ESLAND.",
+	"BENTO_TITLE_4": "DISFRUTA DEL REDDIT DE LA COMUNIDAD",
+	"BENTO_DESCRIPTION_4": "Este año, el reddit no formará parte de las votaciones de los premios, pero sí que <strong>formará parte de la comunidad</strong>. El subreddit oficial de los Premios ESLAND está abierto para ti, para que compartas tus clips, tus opiniones y para que <strong>interactúes con toda la comunidad</strong> del streaming hispanohablante.",
+	"VIDEO_ALT": "Esland - Premios a la comunidad hispanohablante de Streaming",
+  "VIDEO_BUTTON": "Revive la 2ª Edición",
+  "PREFOOTER_VIDEO_TITLE": "Guía de la 3ª Edición de los premios ESLAND"
+
+
 
 	
 
